# alsa-player

./: .gitignore  CMakeLists.txt  alsaPlayer.cpp  alsaPlayerOOP.cpp  alsaPlayerProcedural.cpp  myPlayAlsa.cpp
